Example for IoC + Bean Lifecycle